--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "shelljs": "^0.8.2"
   }
 }
