--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
-    "shelljs": "^0.8.2"
+    "request": "^2.88.0",
+    "shelljs": "^0.8.2",
+    "yargs": "^12.0.1"
   }
 }
