--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive server/**/*.test.js",
+    "test_watch": "mocha --watch --recursive server/**/*.test.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +16,11 @@
     "request": "^2.88.0",
     "shelljs": "^0.8.2",
     "yargs": "^12.0.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "forever": "^0.15.3",
+    "mocha": "^5.2.0",
+    "sinon": "^6.3.4"
   }
 }
